# molmoact2

./: .gitmodules  CLAUDE.md  README copy.md  README.md  inference_script.py  pyproject.toml  run_droid.sh  run_yam.sh
examples/yam/: README.md  analyze_force_baseline.py  apply_next_lite.py  audit_yam_effort_units.py  camera_client.py  camera_server.py  collect_force_baseline.py  eval_utils.py  launch_yaml_eval_molmoact.py  lerobot_convert.py  live_next_lite_force_monitor.py  molmoact_client.py  plot_force_spike_review.py  plot_force_timeline.py  record_follower_hold_contact_probe.py  record_gello_next_dataset.py  record_teleop_force_log.py  requirements.txt  start_camera_server.sh  stream_next_lite_force.py  stream_next_lite_force_jsonl.py  stream_teleop_force.py  train_next_lite.py  trim_h5_time_windows.py
examples/yam/configs/: yam_left.yaml  yam_right.yaml
examples/yam/docs/: force_safety_roadmap.md
examples/yam/gello_min/: __init__.py  env.py  force_safety.py  launch_utils.py  logging_utils.py  next_lite.py  realsense_camera.py  robot.py  yam.py
experiments/lerobot/src/lerobot/async_inference/: helpers.py  policy_server.py  robot_client.py
experiments/lerobot/src/lerobot/cameras/opencv/: camera_opencv.py
experiments/olmo/data/: academic_datasets.py  academic_datasets_manual.py  data_loader.py  dataset.py  debug_pointing_datasets.py  detecting_counting_question.py  dynamic_packer.py  get_dataset.py  iterable_dataset_mixture.py  lerobot_wrapper.py  molmo_hardcodes.py  pixmo_datasets.py  pointing_ab_test.py  robot_processing.py  spatial_datasets.py  video_datasets.py  video_loader.py  video_object_tracking_datasets.py  video_point_tracking_datasets.py  vixmo_datasets.py
experiments/olmo/models/: model.py  model_config.py
experiments/olmo/models/molmo/: data_formatter.py  molmo.py
experiments/olmo/models/molmo2/: molmo2.py  molmo2_preprocessor.py
experiments/olmo/models/molmoact2/: __init__.py  molmoact2.py
experiments/tests/data/: test_data_iterator.py  test_lerobot_camera_keys_alternative.py  test_lerobot_depth_companion_indexing.py  test_lerobot_depth_dataset_root.py  test_lerobot_frame_count_warning.py  test_preprocessor.py
sim_eval/: run_eval.py
sim_eval/inference/: common.py
sim_eval/robots/: bimanual_yam.py  franka_droid.py
(+3 files in other folders)
