[project]
name = "molmoact2-policy-server"
version = "0.1.1"
description = "MolmoAct2 inference server (FastAPI)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers>=4.57,<4.58",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "huggingface-hub[cli]>=0.36",
    "hf-transfer>=0.1.8",
    "pillow>=10",
    "numpy>=1.26,<3",
    "einops>=0.7",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "json-numpy>=2.1.0",
    "mani-skill>=3.0.1",
    "tyro>=1.0.13",
    "imageio>=2.37.3",
    "transforms3d>=0.4.2",
    "gymnasium>=1.3.0",
    "h5py>=3.11",
    "omegaconf>=2.3",
    "pyzmq>=26",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu121", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
